<resources>
    <string name="app_name">Kiddition</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="btnplay">PLAY!</string>
    <string name="log">logo</string>
    <string name="again">return here to try again</string>
    <string name="instrc1">the purple number to the left in the green box is the addition aim</string>
    <string name="instrc2">beside the purple number will show the addition based on buttons pressed</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="ten">10</string>
    <string name="eleven">11</string>
    <string name="twelve">12</string>
    <string name="thirteen">13</string>
    <string name="fourteen">14</string>
    <string name="fifteen">15</string>
    <string name="sixteen">16</string>
    <string name="seventeen">17</string>
    <string name="eighteen">18</string>
</resources>
