<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.nitroja.kbennett.additiongamemodule.MainActivityModule"
    tools:showIn="@layout/activity_main_activity_module"
    android:background="@mipmap/bgblur2">


    <Button
        android:layout_width="100dp"
        android:layout_height="68dp"
        android:id="@+id/buttonmenu"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:text="@string/btnplay"
        android:textSize="23sp"
        android:background="#ffffff" />

    <ImageView
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:id="@+id/imageView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:src="@mipmap/kiddition3"
        android:contentDescription="@string/log" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/again"
        android:id="@+id/textView"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:layout_below="@+id/buttonmenu"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instrc1"
        android:id="@+id/textView2"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:textSize="22sp"
        android:layout_below="@+id/imageView"
        android:layout_alignParentStart="true"
        android:layout_marginTop="48dp"
        android:textAlignment="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instrc2"
        android:id="@+id/textView3"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:textSize="22sp"
        android:layout_marginTop="32dp"
        android:textAlignment="center"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true" />

</RelativeLayout>
